UX: fix status alignment after core change (#451)

--- a/assets/stylesheets/assigns.scss
+++ b/assets/stylesheets/assigns.scss
@@ -106,7 +106,7 @@
 
     .user-wrapper {
       display: flex;
-      align-items: flex-end;
+      align-items: baseline;
       line-height: var(--line-height-small);
       overflow: hidden;
     }
